# sparse_slam

./: CMakeLists.txt  package.xml
include/sparse_slam/: extractor.h  system.h  track.h
src/: extractor.cpp  main.cpp  system.cpp  track.cpp
